--- a/src/app/dbadmin/db-cat-brand/db-cat-brand.component.html
+++ b/src/app/dbadmin/db-cat-brand/db-cat-brand.component.html
@@ -76,7 +76,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold">Add Category Brand<span><i class="fa fa-tag m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-CategoryBrand">Add Category Brand<span><i class="fa fa-tag m-3"></i></span></a>
         </div>
 
 
