--- a/src/app/dbadmin/db-customers/db-customers.component.html
+++ b/src/app/dbadmin/db-customers/db-customers.component.html
@@ -190,7 +190,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold">Add customers <span><i class="fa fa-user m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-CustomerUser">Add customers <span><i class="fa fa-user m-3"></i></span></a>
         </div>
     </div>
 </div>
