--- a/src/app/dbadmin/db-main-cen-users/db-main-cen-users.component.html
+++ b/src/app/dbadmin/db-main-cen-users/db-main-cen-users.component.html
@@ -133,7 +133,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold">Add Maintenance Center User<span><i class="fa fa-user m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-MainCenUser">Add Maintenance Center User<span><i class="fa fa-user m-3"></i></span></a>
         </div>
     </div>
 </div>
