--- a/src/app/dbadmin/nav/nav.component.html
+++ b/src/app/dbadmin/nav/nav.component.html
@@ -31,7 +31,7 @@
                                 <li><a ngbDropdownItem routerLink="DBAdm-Categories">Categories</a></li>
                                 <li><a ngbDropdownItem routerLink="DBAdm-CategoryBrands">Category Brands</a></li>
                                 <li><a ngbDropdownItem routerLink="DBAdm-CategoryModels">Category Models</a></li>
-                                <li><a ngbDropdownItem routerLink="DBAdm-CategoryItems">Categories and Items</a></li>
+                                <li><a ngbDropdownItem routerLink="DBAdm-CategoryItems">Products</a></li>
                             </ul>
                         </div>
                     </li>
