--- a/src/app/dbvendor/db-ven-products/db-ven-products.component.html
+++ b/src/app/dbvendor/db-ven-products/db-ven-products.component.html
@@ -147,7 +147,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold text-center">Add<span><i class="fa fa-tag m-3 me-0"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold text-center" routerLink="DBVen-AddProducts">Add<span><i class="fa fa-tag m-3 me-0"></i></span></a>
         </div>
 
 
