--- a/src/app/dbadmin/db-cat-model/db-cat-model.component.html
+++ b/src/app/dbadmin/db-cat-model/db-cat-model.component.html
@@ -101,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold">Add Category Model<span><i class="fa fa-tag m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-CategoryModel">Add Category Model<span><i class="fa fa-tag m-3"></i></span></a>
         </div>
 
 
