--- a/src/app/dbadmin/db-mer-users/db-mer-users.component.html
+++ b/src/app/dbadmin/db-mer-users/db-mer-users.component.html
@@ -81,7 +81,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold">Add Merchant User<span><i class="fa fa-user m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-MerchantUser">Add Merchant User<span><i class="fa fa-user m-3"></i></span></a>
         </div>
     </div>
 </div>
