--- a/src/app/dbadmin/db-cat/db-cat.component.html
+++ b/src/app/dbadmin/db-cat/db-cat.component.html
@@ -5,7 +5,7 @@
         <div class="text-center d-flex align-items-center justify-content-center total total-orders">
             <div>
                 <p class="m-3">Total Categories</p>
-                <span class="m-3"><i class="fa fa-tags m-3"></i>4</span>
+                <span class="m-3"><i class="fa fa-tags m-3"></i>{{categories.length}}</span>
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-Category">Add Category<span><i class="fa fa-tag m-3"></i></span></a>
+            <a class="btn btn-info text-white w-auto mt-4 fw-bold" routerLink="DBAdm-Add-Category" >Add Category<span><i class="fa fa-tag m-3"></i></span></a>
         </div>
 
 
@@ -97,36 +97,26 @@
                 <th scope="col">Action</th>
             </tr>
         </thead>
-        <tbody id="tableBody">
-            <tr class="userOne order-details">
-                <th scope="row">1</th>
-                <td class="catBrandName">Tires</td>
+        <tbody id="tableBody" *ngFor="let cat of categories">
+            <tr class="userOne order-details" >
+                <th scope="row">{{cat.id}}</th>
+                <td class="catBrandName">{{cat.name}}</td>
                 <td class="actionBtns">
                     <button type="button" class="btn btn-warning text-white">Edit <i
                             class="fa fa-exclamation-triangle"></i></button>
-                    <button type="button" class="btn btn-danger">Reject <i class="fa fa-xing"></i></button>
+
+                            
+                    <button type="button" class="btn btn-danger" (click)="DeleteCat(cat.id)">Delete <i class="fa fa-xing"></i></button>
                 </td>
             </tr>
-            <tr class="userTwo order-details">
-                <th scope="row">2</th>
-                <td class="catBrandName">Oil</td>
-                <td class="actionBtns">
-                    <button type="button" class="btn btn-warning text-white">Edit <i
-                            class="fa fa-exclamation-triangle"></i></button>
-                    <button type="button" class="btn btn-danger">Reject <i class="fa fa-xing"></i></button>
-                </td>
-            </tr>
-            <tr class="userThree order-details">
-                <th scope="row">3</th>
-                <td class="catBrandName">motor</td>
-                <td class="actionBtns">
-                    <button type="button" class="btn btn-warning text-white">Edit <i
-                            class="fa fa-exclamation-triangle"></i></button>
-                    <button type="button" class="btn btn-danger">Reject <i class="fa fa-xing"></i></button>
-                </td>
-            </tr>
+          
         </tbody>
     </table>
+
+    
 </div>
+
+
+
 
 <!-- End total users tree -->
